deploy: 60ca143a667bf63451be77560cd963eab8a69914

--- a/benchmarks/snb/index.html
+++ b/benchmarks/snb/index.html
@@ -192,25 +192,16 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>The Social Network Benchmark consists in fact of three distinct
-benchmarks on a common dataset, since there
-are <strong>three different workloads</strong>.
+          <p>The Social Network Benchmark suite defines graph workloads targeting database management systems.
+The benchmark suite consists of two distinct benchmarks on a common dataset, since there are <strong>two different workloads</strong>.
 Each workload produces a single metric for performance at the given
 scale and a price/performance metric at the scale.  The full
 disclosure further breaks down the composition of the metric into its
 constituent parts, e.g. single query execution
 times.</p>
 <ul>
-<li><strong>The Social Network Benchmark's Interactive workload</strong>, a
-benchmark focusing on transactional graph processing with complex
-read queries that access the neighbourhood of a given node in the
-graph and update operations that continuously insert new data in the
-graph.</li>
-<li><strong>The Social Network Benchmark's Business Intelligence workload</strong>,
-a benchmark that focuses on aggregation- and join-heavy complex
-queries touching a large portion of the graph with microbatches of
-insert/delete update operations. This workload is not yet
-finalized.</li>
+<li><strong>The Social Network Benchmark's Interactive workload</strong> is focusing on transactional graph processing with complex read queries that access the neighbourhood of a given node in the graph and update operations that continuously insert new data in the graph.</li>
+<li><strong>The Social Network Benchmark's Business Intelligence workload</strong> is focusing on aggregation- and join-heavy complex queries touching a large portion of the graph with microbatches of insert/delete operations. This workload is not yet finalized.</li>
 </ul>
 <h4 id="social-network-benchmark-interactive-version-032httpsarxivorgpdf200102299pdf-audited-results">Social Network Benchmark Interactive (<a href="https://arxiv.org/pdf/2001.02299.pdf">version 0.3.2</a>) audited results</h4>
 <h5 id="tugraph">TuGraph</h5>
