deploy: f162eeeb904ed1de209292215050f165cdd506ed

--- a/benchmarks/snb/index.html
+++ b/benchmarks/snb/index.html
@@ -205,8 +205,7 @@ times.</p>
 </ul>
 <h4 id="social-network-benchmark-interactive-version-032httpsarxivorgpdf200102299pdf-audited-results">Social Network Benchmark Interactive (<a href="https://arxiv.org/pdf/2001.02299.pdf">version 0.3.2</a>) audited results</h4>
 <h5 id="tugraph">TuGraph</h5>
-<p>TuGraph was audited in July 2020. TuGraph is owned by <a href="https://www.antgroup.com/en">Ant
-Group</a> now.</p>
+<p>TuGraph was audited in July 2020. TuGraph is owned by the <a href="https://www.antgroup.com/en">Ant Group</a> now.</p>
 <table>
 <thead>
 <tr>
