--- a/event/fourteenth-tuc-meeting/index.html
+++ b/event/fourteenth-tuc-meeting/index.html
@@ -241,22 +241,22 @@
 <tr>
 <td>16:36</td>
 <td>Petra Selmer (Neo4j)</td>
-<td>Status report from the Existing Languages Working Group (ELWG) – <a href="attachments/petra-selmer-elwg.pdf">slides</a></td>
+<td>Status report from the Existing Languages Working Group (ELWG) – <a href="attachments/petra-selmer-elwg.pdf">slides</a>, <a href="https://youtu.be/I5A8VuFDhsA">video</a></td>
 </tr>
 <tr>
 <td>16:48</td>
 <td>Jan Hidders (Birkbeck)</td>
-<td>Status report from the Property Graph Schema Working Group (PGSWG) – <a href="attachments/jan-hidders-pgswg.pdf">slides</a></td>
+<td>Status report from the Property Graph Schema Working Group (PGSWG) – <a href="attachments/jan-hidders-pgswg.pdf">slides</a>, <a href="https://youtu.be/iEbVi9T-HVk">video</a></td>
 </tr>
 <tr>
 <td>17:00</td>
 <td>Keith Hare (JCC Consulting)</td>
-<td>Database Language Standards Structure and Process, SQL/PGQ – <a href="attachments/keith-hare-database-language-standards-structure-and-process-sql-pgq.pdf">slides</a></td>
+<td>Database Language Standards Structure and Process, SQL/PGQ – <a href="attachments/keith-hare-database-language-standards-structure-and-process-sql-pgq.pdf">slides</a>, <a href="">video</a></td>
 </tr>
 <tr>
 <td>17:12</td>
 <td>Stefan Plantikow (GQL Editor)</td>
-<td>Report on the GQL standard – <a href="attachments/stefan-plantikow-gql.pdf">slides</a></td>
+<td>Report on the GQL standard – <a href="attachments/stefan-plantikow-gql.pdf">slides</a>, <a href="https://youtu.be/z0pN5NwKsgc">video</a></td>
 </tr>
 </tbody>
 </table>
@@ -274,32 +274,32 @@
 <tr>
 <td>17:35</td>
 <td>Vasileios Trigonakis (Oracle Labs)</td>
-<td>PGX.D aDFS: An Almost Depth-First-Search Distributed Graph-Querying System  – <a href="attachments/vasileios-trigonakis-pgxd-adfs.pdf">slides</a></td>
+<td>PGX.D aDFS: An Almost Depth-First-Search Distributed Graph-Querying System  – <a href="attachments/vasileios-trigonakis-pgxd-adfs.pdf">slides</a>, <a href="https://youtu.be/cv2ZfWRBOek">video</a></td>
 </tr>
 <tr>
 <td>17:47</td>
 <td>Matthias Hauck (SAP)</td>
-<td>JSON, Spatial, Graph – Multi-model Workloads with SAP HANA Cloud  – <a href="attachments/matthias-hauck-json-spatial-graph-sap-hana-cloud.pdf">slides</a></td>
+<td>JSON, Spatial, Graph – Multi-model Workloads with SAP HANA Cloud  – <a href="attachments/matthias-hauck-json-spatial-graph-sap-hana-cloud.pdf">slides</a>, <a href="https://youtu.be/dgpMJFho6Q8">video</a></td>
 </tr>
 <tr>
 <td>17:59</td>
 <td>Nikolay Yakovets (Eindhoven University of Technology)</td>
-<td>AvantGraph  – <a href="attachments/nikolay-yakovets-avantgraph.pdf">slides</a></td>
+<td>AvantGraph  – <a href="ahttps://youtu.be/z0pN5NwKsgcttachments/nikolay-yakovets-avantgraph.pdf">slides</a>, <a href="https://youtu.be/9M9FOycovTw">video</a></td>
 </tr>
 <tr>
 <td>18:11</td>
 <td>Semih Salihoglu (University of Waterloo)</td>
-<td>GRainDB: Making RDBMSs Efficient on Graph Workloads Through Predefined Joins  – <a href="attachments/semih-salihoglu-graindb.pdf">slides</a></td>
+<td>GRainDB: Making RDBMSs Efficient on Graph Workloads Through Predefined Joins  – <a href="attachments/semih-salihoglu-graindb.pdf">slides</a>, <a href="https://youtu.be/FFK3y6vPHJs">video</a></td>
 </tr>
 <tr>
 <td>18:23</td>
 <td>Semyon Grigorev (Saint Petersburg University)</td>
-<td>Context-free path querying: Obstacles on the way to adoption  – <a href="attachments/semyon-grigorev-cfpq.pdf">slides</a></td>
+<td>Context-free path querying: Obstacles on the way to adoption  – <a href="attachments/semyon-grigorev-cfpq.pdf">slides</a>, <a href="https://youtu.be/pha1xIpEL3I">video</a></td>
 </tr>
 <tr>
 <td>18:35</td>
 <td>Per Fuchs (Technical University of Munich)</td>
-<td>Sortledton: A universal, transactional graph data structure  – <a href="attachments/per-fuchs-sortledton.pdf">slides</a></td>
+<td>Sortledton: A universal, transactional graph data structure  – <a href="attachments/per-fuchs-sortledton.pdf">slides</a>, <a href="">video</a></td>
 </tr>
 </tbody>
 </table>
@@ -317,27 +317,27 @@
 <tr>
 <td>18:55</td>
 <td>Angelos-Christos Anadiotis (Ecole Polytechnique and Institut Polytechnique de Paris)</td>
-<td>Empowering Investigative Journalism with Graph-based Heterogeneous Data Management – <a href="attachments/angelos-christos-anadiotis-investigative-journalism-graph-data-management.pdf">slides</a></td>
+<td>Empowering Investigative Journalism with Graph-based Heterogeneous Data Management – <a href="attachments/angelos-christos-anadiotis-investigative-journalism-graph-data-management.pdf">slides</a>, <a href="https://youtu.be/a1VYjyec8dg">video</a></td>
 </tr>
 <tr>
 <td>19:07</td>
 <td>Vasia Kalavri (Boston University)</td>
-<td>Learning to partition unbounded graph streams – <a href="attachments/vasia-kalavri-learning-to-partition-unbounded-graph-streams.pdf">slides</a></td>
+<td>Learning to partition unbounded graph streams – <a href="attachments/vasia-kalavri-learning-to-partition-unbounded-graph-streams.pdf">slides</a>, <a href="https://youtu.be/PTlUABKWniA">video</a></td>
 </tr>
 <tr>
 <td>19:19</td>
 <td>Muhammad Attahir Jibril (TU Ilmenau)</td>
-<td>Towards a Hybrid OLTP-OLAP Graph Benchmark – <a href="attachments/muhammad-attahir-jibril-hybrid-oltp-olap-benchmark.pdf">slides</a></td>
+<td>Towards a Hybrid OLTP-OLAP Graph Benchmark – <a href="attachments/muhammad-attahir-jibril-hybrid-oltp-olap-benchmark.pdf">slides</a>, <a href="https://youtu.be/tMBVszTSJXc">video</a></td>
 </tr>
 <tr>
 <td>19:31</td>
 <td>Riccardo Tommasini (University of Tartu)</td>
-<td>An outlook on Benchmarks for Graph Stream Processing – <a href="attachments/riccardo-tommasini-graph-stream-processing-benchmarks.pdf">slides</a></td>
+<td>An outlook on Benchmarks for Graph Stream Processing – <a href="attachments/riccardo-tommasini-graph-stream-processing-benchmarks.pdf">slides</a>, <a href="https://youtu.be/HabvJvPXsLc">video</a></td>
 </tr>
 <tr>
 <td>19:43</td>
 <td>Mohamed Ragab (University of Tartu)</td>
-<td>Benchranking: Towards prescriptive analysis of big graph processing: the case of SparkSQL – <a href="attachments/mohamed-ragab-benchranking.pdf">slides</a></td>
+<td>Benchranking: Towards prescriptive analysis of big graph processing: the case of SparkSQL – <a href="attachments/mohamed-ragab-benchranking.pdf">slides</a>, <a href="https://youtu.be/mZ8LhGUq7Wg">video</a></td>
 </tr>
 </tbody>
 </table>
