--- a/event/fourteenth-tuc-meeting/index.html
+++ b/event/fourteenth-tuc-meeting/index.html
@@ -251,7 +251,7 @@
 <tr>
 <td>17:00</td>
 <td>Keith Hare (JCC Consulting)</td>
-<td>Database Language Standards Structure and Process, SQL/PGQ – <a href="attachments/keith-hare-database-language-standards-structure-and-process-sql-pgq.pdf">slides</a>, <a href="">video</a></td>
+<td>Database Language Standards Structure and Process, SQL/PGQ – <a href="attachments/keith-hare-database-language-standards-structure-and-process-sql-pgq.pdf">slides</a>, <a href="https://youtu.be/ZgFCuzods4g">video</a></td>
 </tr>
 <tr>
 <td>17:12</td>
@@ -299,7 +299,7 @@
 <tr>
 <td>18:35</td>
 <td>Per Fuchs (Technical University of Munich)</td>
-<td>Sortledton: A universal, transactional graph data structure  – <a href="attachments/per-fuchs-sortledton.pdf">slides</a>, <a href="">video</a></td>
+<td>Sortledton: A universal, transactional graph data structure  – <a href="attachments/per-fuchs-sortledton.pdf">slides</a>, <a href="https://youtu.be/33ZjsNN0hhU">video</a></td>
 </tr>
 </tbody>
 </table>
