deploy: c6ff735bf087163d5fe818273a590eb462436849

--- a/becoming-a-member/index.html
+++ b/becoming-a-member/index.html
@@ -199,7 +199,7 @@
 <li>Right to membership of LDBC task forces. Currently, there are task forces on the Semantic Publishing Benchmark, the Social Network Benchmark Interactive, BI and the Graphalytics workloads, as well as the Graph Query Language task force.</li>
 <li>Access to research resources at academic partners. This includes the ability to look into research agenda&rsquo;s provide feedback and establish working relationships with students, as well as arrange targeted internships with MSc and PhD students provided by these partners.</li>
 </ul>
-<h4 id="2021-annual-membership-dues">2021 annual membership dues</h4>
+<h4 id="2021-annual-membership-fees">2021 annual membership fees</h4>
 <ul>
 <li>Individual Associate member​:​ no subscription fee</li>
 <li>Individual Board member​ ​(standard rate): € 150</li>
