deploy: 775d9ea9a084420c57b6cf916272c4ba5b435b71

--- a/gql-community/elwg/index.html
+++ b/gql-community/elwg/index.html
@@ -191,7 +191,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>This is just a page stub.</p>
+          <p><strong>Group leader:</strong> Petra Selmer (Neo4j)</p>
 
         </div>
       </div>
