--- a/gql-community/pgswg/index.html
+++ b/gql-community/pgswg/index.html
@@ -191,7 +191,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>This is just a page stub.</p>
+          <p><strong>Group leaders:</strong> Jan Hidders (Birkbeck, University of London), Juan Sequeda (data.world)</p>
 
         </div>
       </div>
