--- a/gql-community/fswg/index.html
+++ b/gql-community/fswg/index.html
@@ -191,7 +191,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>This is just a page stub.</p>
+          <p><strong>Group leaders:</strong> Leonid Libkin (ENS Paris, University of Edinburgh), Paolo Guagliardo (University of Edinburgh)</p>
 
         </div>
       </div>
