--- a/benchmarks/overview/index.html
+++ b/benchmarks/overview/index.html
@@ -192,7 +192,12 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>This is just a page stub.</p>
+          <p>LDBC currently offers the following benchmarks:</p>
+<ul>
+<li><strong><a href="/benchmarks/graphalytics">Graphalyitcs</a>:</strong> graph algorithms for graph analytical platforms</li>
+<li><strong><a href="/benchmarks/spb">Semantic Publishing Benchmark</a></strong> an RDF-based benchmark for semantic databases</li>
+<li><strong><a href="/benchmarks/snb">Social Network Benchmark Suite</a>:</strong> targets graph database management systems. Consists of two workloads, Interactive and Business Intelligence (work-in-progress)</li>
+</ul>
 
         </div>
       </div>
