--- a/benchmarks/spb/index.html
+++ b/benchmarks/spb/index.html
@@ -206,7 +206,7 @@ operations that add new data, alter or delete existing (b) aggregation
 operations that retrieve content according to various criteria. The
 benchmark also tests conformance for various rules inside
 the OWL2-RL rule-set.</p>
-<p>The <a href="https://github.com/ldbc/ldbc_spb_bm_2.0/blob/master/doc/LDBC_SPB_v2.0.docx?raw=true">SPB specification</a> contains the description of the benchmark and the data generator and all information about its software components can be found on the <a href="http://ldbcouncil.org/developer/spb">SPB developer page</a>.</p>
+<p>The <a href="ldbc-spb-v2.0-specification.pdf">SPB specification</a> contains the description of the benchmark and the data generator and all information about its software components can be found on the <a href="http://ldbcouncil.org/developer/spb">SPB developer page</a>.</p>
 <h4 id="semantic-publishing-benchmark-spb-audited-results">Semantic Publishing Benchmark (SPB) Audited Results</h4>
 <p>Results for Scale Factors SF1 (64M), SF3 (256M), and SF5 (1G) triples are shown below.</p>
 <table>
