deploy: d89a2eab03150d5ffae55ee94457eb2882ebaa19

--- a/publication/dblp-conftpctc-waudby-skmbs-20/index.html
+++ b/publication/dblp-conftpctc-waudby-skmbs-20/index.html
@@ -187,7 +187,7 @@
 <section class="section">
   <div class="container">
         <div class="row">
-          <div class="section-subheading article-title col-lg-12 mb-0 mt-0"><a class="article-title-custom" style="color: #151515;" href="/publication/tpctc-acid/">Towards Testing ACID Compliance in the LDBC Social Network Benchmark</a>
+          <div class="section-subheading article-title col-lg-12 mb-0 mt-0"><a class="article-title-custom" style="color: #151515;" href="/publication/dblp-conftpctc-waudby-skmbs-20/">Towards Testing ACID Compliance in the LDBC Social Network Benchmark</a>
 
 
 
@@ -237,7 +237,7 @@
   
     József Marton,
   
-    Peter Boncz,
+    Peter A. Boncz,
   
 
 
@@ -284,13 +284,16 @@ Gábor Szárnyas.
 
 
   
+  
+    
+  
 
 
 
 
 
 <a href="#" class="btn btn-outline-primary btn-sm js-cite-modal"
-        data-filename="/publication/tpctc-acid/cite.bib">
+        data-filename="/publication/dblp-conftpctc-waudby-skmbs-20/cite.bib">
   
   CITE
 </a>
@@ -306,6 +309,10 @@ Gábor Szárnyas.
 
 
 
+
+<a class="btn btn-outline-primary btn-sm" href="https://doi.org/10.1007/978-3-030-84924-5_1" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
