--- a/publication/index.html
+++ b/publication/index.html
@@ -397,7 +397,7 @@
   
     József Marton,
   
-    Peter Boncz,
+    Peter A. Boncz,
   
 
 
@@ -411,7 +411,7 @@ Gábor Szárnyas.
 
   </span>
   (2020).
-  <a href="/publication/tpctc-acid/">Towards Testing ACID Compliance in the LDBC Social Network Benchmark</a>.
+  <a href="/publication/dblp-conftpctc-waudby-skmbs-20/">Towards Testing ACID Compliance in the LDBC Social Network Benchmark</a>.
   <em>TPCTC</em>.
   
   <p>
@@ -425,13 +425,16 @@ Gábor Szárnyas.
 
 
   
+  
+    
+  
 
 
 
 
 
 <a href="#" class="btn btn-outline-primary btn-sm btn-sm js-cite-modal"
-        data-filename="/publication/tpctc-acid/cite.bib">
+        data-filename="/publication/dblp-conftpctc-waudby-skmbs-20/cite.bib">
   
   CITE
 </a>
@@ -447,6 +450,10 @@ Gábor Szárnyas.
 
 
 
+
+<a class="btn btn-outline-primary btn-sm btn-sm" href="https://doi.org/10.1007/978-3-030-84924-5_1" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
