deploy: bb1c505e965084ea523c7d9396391d7248daed65

--- a/gql-community/elwg/index.html
+++ b/gql-community/elwg/index.html
@@ -191,7 +191,19 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p><strong>Group leader:</strong> Petra Selmer (Neo4j)</p>
+          <ul>
+<li><strong>Group leader:</strong> Petra Selmer (Neo4j)</li>
+<li><strong>Focus:</strong> Surveying existing graph query languages</li>
+</ul>
+<h4 id="group-members">Group members</h4>
+<ul>
+<li>Angela Bonifati (Lyon 1 University)</li>
+<li>Frank Celler (ArangoDB)</li>
+<li>Victor Lee (TigerGraph)</li>
+<li>Harsh Thakkar (Consultant OSTHUS GmBH)</li>
+<li>Jeffrey Lovitz (RedisGraph)</li>
+<li>Renzo Angles (Universidad de Talca)</li>
+</ul>
 
         </div>
       </div>
