deploy: 0b52fb3c34eca55f2a63ad837568165ea4db524a

--- a/gql-community/pgswg/index.html
+++ b/gql-community/pgswg/index.html
@@ -191,7 +191,142 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p><strong>Group leaders:</strong> Jan Hidders (Birkbeck, University of London), Juan Sequeda (data.world)</p>
+          <p><strong>Group leaders:</strong> Jan Hidders (Birkbeck College, University of London), Juan Sequeda (data.world)</p>
+<p>The PGSWG has 4 sub-groups: PG-Basic, PG-Constraints, PG-Properties, PG-Nulls</p>
+<h2 id="pg-basic">PG-Basic</h2>
+<ul>
+<li><strong>Group leader:</strong> Jan Hidders (Birkbeck College, University of London)</li>
+<li><strong>Focus:</strong> Basic constructs and semantics</li>
+</ul>
+<h4 id="group-members">Group members</h4>
+<ul>
+<li>Alastair Green (JCC Consulting; Birkbeck College, University of London)</li>
+<li>Angela Bonifati (Lyon 1 University)</li>
+<li>Bei Li (Google)</li>
+<li>Dominik Tomaszuk (University of Bialystok)</li>
+<li>Enrico Franconi (Free University of Bozen-Bolzano)</li>
+<li>George Fletcher (Eindhoven TU)</li>
+<li>Gilles Privat (Orange S.A.)</li>
+<li>Hannes Voigt (Neo4j)</li>
+<li>Harsh Thakkar (Consultant OSTHUS GmBH)</li>
+<li>Jan Hidders (Birkbeck College, University of London)</li>
+<li>Jason Crawford (Amazon)</li>
+<li>Josh Perryman (VeracityID)</li>
+<li>Joshua Shinavier (LinkedIn)</li>
+<li>Juan Sequeda (data.world)</li>
+<li>Keith W. Hare (JCC Consulting)</li>
+<li>Koji Annoura (UTI, Inc.)</li>
+<li>Leonid Libkin (ENS Paris, University of Edinburgh)</li>
+<li>Liat Peterfreund (ENS Paris)</li>
+<li>Michael Schmidt (Amazon Web Services)</li>
+<li>Renzo Angles (Universidad de Talca)</li>
+<li>Slawek Staworko (Universidad de Talca)</li>
+<li>Stefania Dumbrava (Ecole Nationale Supérieure d&rsquo;Informatique pour l&rsquo;Industrie et l&rsquo;Entreprise (ENSIIE))</li>
+<li>Victor Lee (TigerGraph)</li>
+<li>Victor Marsault (CNRS)</li>
+<li>Wook-Shin Han (POSTECH)</li>
+</ul>
+<h2 id="pg-constraints">PG-Constraints</h2>
+<ul>
+<li><strong>Group leader:</strong> George Fletcher (TU Eindhoven)</li>
+<li><strong>Focus:</strong> Key constraints and cardinality constraints</li>
+</ul>
+<h4 id="group-members-1">Group members</h4>
+<ul>
+<li>Alastair Green (JCC Consulting; Birkbeck College, University of London)</li>
+<li>Andrea Cali (Birkbeck College, University of London)</li>
+<li>Angela Bonifati (Lyon 1 University)</li>
+<li>Bei Li (Google)</li>
+<li>Borislav Iordanov (Kobrix)</li>
+<li>Dominik Tomaszuk (University of Bialystok)</li>
+<li>Enrico Franconi (Free University of Bozen-Bolzano)</li>
+<li>Filip Murlak (University of Warsaw)</li>
+<li>George Fletcher (Eindhoven TU)</li>
+<li>Jan Hidders (Birkbeck College, University of London)</li>
+<li>Jason Crawford (Amazon)</li>
+<li>Josh Perryman (VeracityID)</li>
+<li>Juan Sequeda (data.world)</li>
+<li>Keith W. Hare (JCC Consulting)</li>
+<li>Koji Annoura (UTI, Inc.)</li>
+<li>Leonid Libkin (ENS Paris, University of Edinburgh)</li>
+<li>Michael Schmidt (Amazon Web Services)</li>
+<li>Slawek Staworko (Universidad de Talca)</li>
+<li>Stefania Dumbrava (Ecole Nationale Supérieure d&rsquo;Informatique pour l&rsquo;Industrie et l&rsquo;Entreprise (ENSIIE))</li>
+<li>Wim Martens (University of Bayreuth)</li>
+<li>Wook-Shin Han (POSTECH)</li>
+</ul>
+<h2 id="pg-properties">PG-Properties</h2>
+<ul>
+<li><strong>Group leader:</strong> Joshua Shinavier (LinkedIn)</li>
+<li><strong>Focus:</strong> Data types for properties</li>
+</ul>
+<h4 id="group-members-2">Group members</h4>
+<ul>
+<li>Alastair Green (JCC Consulting; Birkbeck College, University of London)</li>
+<li>Angela Bonifati (Lyon 1 University)</li>
+<li>Bei Li (Google)</li>
+<li>Borislav Iordanov (Kobrix)</li>
+<li>Dominik Tomaszuk (University of Bialystok)</li>
+<li>Enrico Franconi (Free University of Bozen-Bolzano)</li>
+<li>Filip Murlak (University of Warsaw)</li>
+<li>George Fletcher (Eindhoven TU)</li>
+<li>Gilles Privat (Orange S.A.)</li>
+<li>Harsh Thakkar (Consultant OSTHUS GmBH)</li>
+<li>Jan Hidders (Birkbeck College, University of London)</li>
+<li>Jason Crawford (Amazon)</li>
+<li>Josh Perryman (VeracityID)</li>
+<li>Joshua Shinavier (LinkedIn)</li>
+<li>Juan Sequeda (data.world)</li>
+<li>Keith W. Hare (JCC Consulting)</li>
+<li>Koji Annoura (UTI, Inc.)</li>
+<li>Michael Schmidt (Amazon Web Services)</li>
+<li>Renzo Angles (Universidad de Talca)</li>
+<li>Stefania Dumbrava (Ecole Nationale Supérieure d&rsquo;Informatique pour l&rsquo;Industrie et l&rsquo;Entreprise (ENSIIE))</li>
+<li>Victor Lee (TigerGraph)</li>
+<li>Victor Marsault (CNRS)</li>
+<li>Wim Martens (University of Bayreuth)</li>
+<li>Wook-Shin Han (POSTECH)</li>
+</ul>
+<h2 id="pg-nulls">PG-Nulls</h2>
+<ul>
+<li><strong>Group leader:</strong> Angela Bonifati (Lyon 1 University)</li>
+<li><strong>Focus:</strong> Null values</li>
+</ul>
+<h4 id="group-members-3">Group members</h4>
+<ul>
+<li>Alastair Green (JCC Consulting; Birkbeck College, University of London)</li>
+<li>Angela Bonifati (Lyon 1 University)</li>
+<li>Dominik Tomaszuk (University of Bialystok)</li>
+<li>Enrico Franconi (Free University of Bozen-Bolzano)</li>
+<li>Filip Murlak (University of Warsaw)</li>
+<li>Gilles Privat (Orange S.A.)</li>
+<li>Jan Hidders (Birkbeck College, University of London)</li>
+<li>Joshua Shinavier (LinkedIn)</li>
+<li>Juan Sequeda (data.world)</li>
+<li>Koji Annoura (UTI, Inc.)</li>
+<li>Leonid Libkin (ENS Paris, University of Edinburgh)</li>
+<li>Liat Peterfreund (ENS Paris)</li>
+<li>Michael Schmidt (Amazon Web Services)</li>
+<li>Paolo Guagliardo (University of Edinburgh)</li>
+<li>Slawek Staworko (Universidad de Talca)</li>
+<li>Stefania Dumbrava (Ecole Nationale Supérieure d&rsquo;Informatique pour l&rsquo;Industrie et l&rsquo;Entreprise (ENSIIE))</li>
+<li>Victor Lee (TigerGraph)</li>
+<li>Wim Martens (University of Bayreuth)</li>
+<li>Wook-Shin Han (POSTECH)</li>
+</ul>
+<h2 id="threshold-queries">Threshold queries</h2>
+<ul>
+<li>Angela Bonifati (Lyon 1 University)</li>
+<li>Dominik Tomaszuk (University of Bialystok)</li>
+<li>Filip Murlak (University of Warsaw)</li>
+<li>George Fletcher (Eindhoven TU)</li>
+<li>Jan Hidders (Birkbeck College, University of London)</li>
+<li>Joshua Shinavier (LinkedIn)</li>
+<li>Matthias Hofer (University of Bayreuth)</li>
+<li>Slawek Staworko (Universidad de Talca)</li>
+<li>Stefania Dumbrava (Ecole Nationale Supérieure d&rsquo;Informatique pour l&rsquo;Industrie et l&rsquo;Entreprise (ENSIIE))</li>
+<li>Wim Martens (University of Bayreuth)</li>
+</ul>
 
         </div>
       </div>
