deploy: d3e23b22310b0f55a1bfeeb91c2025c1fd8c8235

--- a/benchmarks/spb/index.html
+++ b/benchmarks/spb/index.html
@@ -193,19 +193,8 @@
       <div class="col-lg-12">
         <div class="content">
           <p>The Semantic Publishing Benchmark (SPB) is an LDBC benchmark for testing the performance of RDF engines inspired by the Media/Publishing industry. In particular, LDBC worked with British Broadcasting Corporation <a href="http://www.bbc.co.uk/blogs/internet/posts/Linked-Data-Connecting-together-the-BBCs-Online-Content">BBC</a> to define this benchmark, for which BBC donated workloads, <a href="https://github.com/ldbc/ldbc_spb_bm_2.0/tree/master/datasets_and_queries/ontologies">ontologies</a> and data. The publishing industry is an area where significant adoption of RDF is taking place.</p>
-<p>There have been many academic benchmarks for RDF but none of these are
-truly industrial-grade. The SPB  combines a set of complex queries under
-inference with continuous updates and special failover tests for systems
-implementing replication.</p>
-<p>SPB performance is measured by producing a workload of CRUD (Create,
-Read, Update, Delete) operations which are executed simultaneously. The
-benchmark offers a data generator that uses real reference data to
-produce datasets of various sizes and tests the scalability aspect
-of RDF systems. The benchmark workload consists of (a) editorial
-operations that add new data, alter or delete existing (b) aggregation
-operations that retrieve content according to various criteria. The
-benchmark also tests conformance for various rules inside
-the OWL2-RL rule-set.</p>
+<p>There have been many academic benchmarks for RDF but none of these are truly industrial-grade. The SPB  combines a set of complex queries under inference with continuous updates and special failover tests for systems implementing replication.</p>
+<p>SPB performance is measured by producing a workload of CRUD (Create, Read, Update, Delete) operations which are executed simultaneously. The benchmark offers a data generator that uses real reference data to produce datasets of various sizes and tests the scalability aspect of RDF systems. The benchmark workload consists of (a) editorial operations that add new data, alter or delete existing (b) aggregation operations that retrieve content according to various criteria. The benchmark also tests conformance for various rules inside the OWL2-RL rule-set.</p>
 <p>The <a href="ldbc-spb-v2.0-specification.pdf">SPB specification</a> contains the description of the benchmark and the data generator and all information about its software components can be found on the <a href="http://ldbcouncil.org/developer/spb">SPB developer page</a>.</p>
 <h4 id="semantic-publishing-benchmark-spb-audited-results">Semantic Publishing Benchmark (SPB) Audited Results</h4>
 <p>Results for Scale Factors SF1 (64M), SF3 (256M), and SF5 (1G) triples are shown below.</p>
