deploy: e802a9ab5b3b22c89f838368f5ed36795620e087

--- a/gql-community/pgswg/index.html
+++ b/gql-community/pgswg/index.html
@@ -220,10 +220,11 @@
 <li>Liat Peterfreund (ENS Paris)</li>
 <li>Michael Schmidt (Amazon Web Services)</li>
 <li>Renzo Angles (Universidad de Talca)</li>
-<li>Slawek Staworko (Universidad de Talca)</li>
+<li>Slawek Staworko (Université de Lille)</li>
 <li>Stefania Dumbrava (Ecole Nationale Supérieure d&rsquo;Informatique pour l&rsquo;Industrie et l&rsquo;Entreprise (ENSIIE))</li>
 <li>Victor Lee (TigerGraph)</li>
 <li>Victor Marsault (CNRS)</li>
+<li>Wim Martens (University of Bayreuth)</li>
 <li>Wook-Shin Han (POSTECH)</li>
 </ul>
 <h2 id="pg-constraints">PG-Constraints</h2>
@@ -250,7 +251,7 @@
 <li>Koji Annoura (UTI, Inc.)</li>
 <li>Leonid Libkin (ENS Paris, University of Edinburgh)</li>
 <li>Michael Schmidt (Amazon Web Services)</li>
-<li>Slawek Staworko (Universidad de Talca)</li>
+<li>Slawek Staworko (Université de Lille)</li>
 <li>Stefania Dumbrava (Ecole Nationale Supérieure d&rsquo;Informatique pour l&rsquo;Industrie et l&rsquo;Entreprise (ENSIIE))</li>
 <li>Wim Martens (University of Bayreuth)</li>
 <li>Wook-Shin Han (POSTECH)</li>
@@ -308,7 +309,7 @@
 <li>Liat Peterfreund (ENS Paris)</li>
 <li>Michael Schmidt (Amazon Web Services)</li>
 <li>Paolo Guagliardo (University of Edinburgh)</li>
-<li>Slawek Staworko (Universidad de Talca)</li>
+<li>Slawek Staworko (Université de Lille)</li>
 <li>Stefania Dumbrava (Ecole Nationale Supérieure d&rsquo;Informatique pour l&rsquo;Industrie et l&rsquo;Entreprise (ENSIIE))</li>
 <li>Victor Lee (TigerGraph)</li>
 <li>Wim Martens (University of Bayreuth)</li>
@@ -323,7 +324,7 @@
 <li>Jan Hidders (Birkbeck College, University of London)</li>
 <li>Joshua Shinavier (LinkedIn)</li>
 <li>Matthias Hofer (University of Bayreuth)</li>
-<li>Slawek Staworko (Universidad de Talca)</li>
+<li>Slawek Staworko (Université de Lille)</li>
 <li>Stefania Dumbrava (Ecole Nationale Supérieure d&rsquo;Informatique pour l&rsquo;Industrie et l&rsquo;Entreprise (ENSIIE))</li>
 <li>Wim Martens (University of Bayreuth)</li>
 </ul>
